# pod-sync

./: .editorconfig  .env  .gitignore  Cargo.toml  README.md  gpodder.tsp  index.html  package-lock.json  package.json  postcss.config.js  schema.yml  tailwind.config.js
crates/autometrics/: Cargo.toml  build.rs
crates/autometrics-macros/: Cargo.toml
crates/autometrics/src/: constants.rs  labels.rs  lib.rs  objectives.rs  settings.rs  task_local.rs
crates/autometrics/src/tracker/: metrics.rs  mod.rs
fixtures/: dummy.sql
migrations/: 20240328190428_create-table_users.sql  20240328190432_create-table_user-sessions.sql  20240722053550_create-table_devices.sql  20240722053816_create-table_subscriptions.sql  20240724082048_create-table_episode-actions.sql  20240725174246_create-table_subscriptions.sql  20240725174655_create-table_user-subscriptions.sql  20240725180104_create-table_task-deletion.sql  20240725180131_create-table_task-identification.sql  20240725184135_create-table_subscription-feeds.sql  20240725184138_create-table_subscription-guids.sql  20241001221557_create-table_tag.sql  20241001221730_create-table_user.sql  20241001221757_create-table_account.sql  20241001222143_create-table_user-session.sql  20241001222246_create-table_podcast.sql  20241001222516_create-table_podcast-episode.sql  20241001222655_create-table_podcast-feed.sql  20241001222730_create-table_podcast-guid.sql  20241001222852_create-table_podcast-tag.sql  20241001223109_create-table_subscription.sql  20241001223251_create-table_subscription-tag.sql  20241001223438_create-table_task-deletion.sql  20241001223524_create-table_task-identification.sql  20241001225321_create-index_tag_kind_content.sql  20241001225344_create-index_account_kind_email.sql  20241001225410_create-index_account_kind_external-id.sql  20241001225438_create-index_user-account_user-id.sql  20241001225500_create-index_user-account_account-id.sql  20241001225517_create-index_user-session_user-id_token.sql  20241001225556_create-index_subscription_user-id.sql  20241001225607_create-index_subscription-tag_subscription-id.sql  20241001225621_create-index_task-deletion_user-id_podcast-id.sql
public/: style.css
src/: config.rs  database.rs  error.rs  main.rs
src/database/: mod.rs  session.rs  subscription.rs  test.rs  user.rs
src/database/subscription/: mod.rs  query.rs
src/database/tasks/: deletion.rs  identification.rs  mod.rs
src/extractor/: auth.rs
src/handlers/: auth.rs  device.rs  mod.rs  subscriptions.rs
src/handlers/subscriptions/: add.rs  delete.rs  get.rs  list.rs  mod.rs  status.rs  update.rs
src/handlers/web/: auth.rs  mod.rs  user.rs
src/models/: mod.rs  subscriptions.rs
src/tasks/: deletion.rs  identification.rs  mod.rs
src/utils/: content_type.rs  json.rs  mod.rs  serde.rs  test.rs  xml.rs
src/web/: auth.rs  mod.rs  user.rs
templates/: _base.html  _base_large.html  _base_small.html  _macros.html  index.html
templates/auth/: login.html  register.html
templates/user/: devices.html  index.html
