[package]
name = "pod-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.86"
argon2 = { version = "=0.5.3", features = ["std"] }
askama = "=0.12.1"
async-trait = "=0.1.81"
autometrics = { path = "./crates/autometrics" }
axum = "=0.7.5"
axum-core = "=0.4.3"
axum-extra = { version = "=0.9.3", features = ["cookie", "cookie-private", "typed-header"] }
axum-prometheus = "=0.7.0"
data-encoding = "=2.6.0"
headers = "=0.4.0"
lettre = { version = "=0.11.7", features = ["dkim", "serde", "tokio1", "tokio1-native-tls", "tracing"] }
metrics = "=0.23.0"
metrics-exporter-prometheus = { version = "=0.15.3", default-features = false, features = ["http-listener"] }
rand = "=0.8.5"
serde = { version = "=1.0.204", features = ["derive"] }
sqids = "=0.4.1"
sqlx = { version = "=0.7.4", features = ["runtime-tokio-native-tls", "sqlite", "time", "uuid"] }
thiserror = "=1.0.63"
time = { version = "=0.3.36", features = ["formatting", "local-offset", "parsing", "macros", "serde", "std"] }
tokio = { version = "=1.38.1", features = ["rt-multi-thread", "macros", "signal"] }
toml = "=0.8.15"
tower = "=0.4.13"
tower-helmet = "=0.3.0"
tower-http = { version = "=0.5.2", features = ["metrics", "timeout", "trace"] }
tower_governor = { version = "=0.4.2", features = ["tracing"] }
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"
validator = { version = "=0.18.1", features = ["derive"] }

[build-dependencies]
vergen = "=9.0.0"
vergen-git2 = "=1.0.0"
vergen-gitcl = "=1.0.0"

[workspace]
resolver = "2"
members = [
    "crates/autometrics",
    "crates/autometrics-macros"
]

[profile.dev.package."*"]
opt-level = 3
