[package]
name = "pod-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.89"
argon2 = { version = "=0.5.3", features = ["std"] }
askama = "=0.12.1"
async-trait = "=0.1.83"
autometrics = { path = "./crates/autometrics" }
axum = "=0.7.7"
axum-core = "=0.4.5"
axum-extra = { version = "=0.9.4", features = ["cookie", "cookie-private", "typed-header"] }
axum-prometheus = "=0.7.0"
bytes = "=1.7.2"
data-encoding = "=2.6.0"
headers = "=0.4.0"
headers-accept = "=0.1.4"
lettre = { version = "=0.11.9", features = ["dkim", "serde", "tokio1", "tokio1-native-tls", "tracing"] }
mediatype = "=0.19.18"
metrics = "=0.23.0"
metrics-exporter-prometheus = { version = "=0.15.3", default-features = false, features = ["http-listener"] }
mime = "=0.3.17"
oxide-auth = "=0.6.1"
oxide-auth-axum = "=0.5.0"
pin-project-lite = "=0.2.14"
quick-xml = { version = "=0.36.2", features = ["serde", "serialize"] }
rand = "=0.8.5"
reqwest = "=0.12.7"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
sqids = "=0.4.1"
sqlx = { version = "=0.8.2", features = ["runtime-tokio-native-tls", "sqlite", "time", "uuid"] }
thiserror = "=1.0.64"
time = { version = "=0.3.36", features = ["formatting", "local-offset", "parsing", "macros", "serde", "std"] }
tokio = { version = "=1.40.0", features = ["rt-multi-thread", "macros", "signal"] }
toml = "=0.8.19"
tower = "=0.5.1"
tower-helmet = "=0.3.0"
tower-http = { version = "=0.6.1", features = ["metrics", "timeout", "trace"] }
tower_governor = { version = "=0.4.2", features = ["tracing"] }
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"
url = { version = "=2.5.2", features = ["serde"] }
uuid = { version = "=1.10.0", features = ["v5", "serde"] }
validator = { version = "=0.18.1", features = ["derive"] }

[build-dependencies]
vergen = "=9.0.1"
vergen-git2 = "=1.0.1"
vergen-gitcl = "=1.0.1"

[dev-dependencies]
http-body-util = "=0.1.2"
pretty_assertions = "=1.4.1"

[workspace]
resolver = "2"
members = [
    "crates/autometrics",
    "crates/autometrics-macros"
]

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
tower_governor = { git = "https://github.com/Atrox/tower-governor", rev = "fb57173dd7dfd48811d00e6ca9066662915a0f3c" }
